tests/fixtures/errors/undeclared_identifier.cpp
// Test: undeclared identifier
int main() {
    int y;
    int x = zzzz;  // zzzz not declared
    return 0;
}
